# Microservice-Analytics

./: .dockerignore  .env.azure  .env.example  .gitignore  CONFIG_README.md  Dockerfile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  go.mod  go.sum  main.go  main.py  pyproject.toml
analytics/application/commandservices/: execution_analytics_command_service.go  sync_service.go  user_registration_analytics_command_service.go  user_registration_sync_service.go
analytics/application/queryservices/: execution_analytics_query_service.go  user_registration_analytics_query_service.go
analytics/domain/model/aggregates/: execution_analytics.go  user_registration_analytics.go
analytics/domain/model/entities/: test_result.go
analytics/domain/model/valueobjects/: challenge_id.go  email.go  execution_id.go  execution_status.go  profile_id.go  programming_language.go  provider.go  student_id.go  test_id.go  user_id.go
analytics/domain/repositories/: execution_analytics_repository.go  user_registration_analytics_repository.go
analytics/infrastructure/config/: config.go  database.go  eureka.go
analytics/infrastructure/messaging/kafka/: consumer.go  event.go  (+1 more)
docs/: ARCHITECTURE.md  AZURE_EVENT_HUB_CONFIG.md  EUREKA_CONFIGURATION.md  analytics-event-ingestion.md  docs.go  swagger.json  swagger.yaml
scripts/: check_kafka_env.sh  debug_env.go  test_azure_eventhub.go  verify-config.sh
src/analytics/: config.py
src/analytics/application/: __init__.py
src/analytics/core/: __init__.py
src/analytics/infrastructure/: __init__.py
src/analytics/interfaces/: __init__.py
(+34 files in other folders)
