[project]
name = "microservice-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "scalar-fastapi>=1.4.3",
    "uvicorn[standard]>=0.38.0",
    "aiokafka>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "py-eureka-client>=0.11.7",
]
